# picrawler-voice

./: .env.example  .gitignore  pyproject.toml  requirements.txt
src/robot/: main.py
src/robot/behaviors/: base.py  idle_patrol.py  idle_stand.py  smart_patrol.py  task_behavior.py
src/robot/brain/: arbiter.py  llm_client.py  nav_memory.py  nav_tools.py  orchestrator.py  planner.py  tools.py
src/robot/core/: bus.py  events.py  state.py
src/robot/display/: epaper.py
src/robot/hearing/: audio_input.py  denoise.py  stt.py  wake_word.py
src/robot/motor/: controller.py  primitives.py  safety.py
src/robot/perception/: battery.py  camera.py  people_registry.py  presence.py  scene.py
src/robot/speech/: tts.py
systemd/: picrawler-voice.service
tests/unit/: test_arbiter.py  test_hearing.py  test_idle_patrol.py  test_motor_safety.py
