[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "picrawler-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",           # async Ollama client
    "faster-whisper>=1.0",   # STT on AI HAT 2+ / CPU
    "openwakeword>=0.6",     # wake-word detection
    "sounddevice>=0.4",      # USB mic capture
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
robot_hat = { path = "/home/penguin/robot-hat" }
